[package]
name = "sine_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
futures = "0.3.17"
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["codec"] }
guard = "0.5.1"
anyhow = "1.0.44"
log = "0.4.14"
